# AgenticAI-QuantitativeAnalysisSystem

./: .env.example  .gitignore  InterviewQ&A.md  README.md  main.py  pyproject.toml  requirements.txt
src/agents/: agents.py  crew.py  tasks.py
src/agents/tools/: financial.py
src/api/: main.py  models.py  routes.py
src/frontend/: app.py
src/shared/: config.py  database.py  storage.py
src/workers/: __init__.py  analysis_worker.py
